--- a/demo.ipynb
+++ b/demo.ipynb
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8e23666e07d4b85ab19b5ccd5f50926",
+       "model_id": "edcd2feb7aa747fb921d8f18af7ed619",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,10 +64,17 @@
     "    \"answer\": \"a\"\n",
     "}]\n",
     "\n",
-    "custom_fields = [(\"reason\", str, 100)] # (field_name, type, max_length)\n",
+    "custom_fields = [(\"rationale\", str, 100)] # (field_name, type, max_length)\n",
     "anno = Annotator(problems, custom_fields=custom_fields)\n",
     "anno.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
