Update demo and readme usage

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Normal usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91f77b6d893040f89c8df81ea00d989c",
+       "model_id": "afc48ca2fa3548b09431e53e5980e5b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,14 +43,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Custom fields"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edcd2feb7aa747fb921d8f18af7ed619",
+       "model_id": "cef3134818334857a8caf1dbb71e8d1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,11 +84,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3. Field filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4499b156cd99451e9d6002a526a37f38",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Output(),), layout=Layout(width='43%')), VBox(children=(Textarea(value='', descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "problems = [{\n",
+    "    \"id\": 1,\n",
+    "    \"problem\": \"Where would I not want a fox? (a problem from coommonsenseQA)\",\n",
+    "    \"options\": {\n",
+    "        \"a\": \"hen house\", \"b\": \"england\", \"c\": \"mountains\", \"d\": \"english hunt\", \"e\": \"california\"\n",
+    "    },\n",
+    "    \"answer\": \"a\"\n",
+    "}]\n",
+    "\n",
+    "filtered_fields = ['id'] \n",
+    "anno = Annotator(problems, filtered_fields=filtered_fields)\n",
+    "anno.start()"
+   ]
   }
  ],
  "metadata": {
