Update readme and demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afc48ca2fa3548b09431e53e5980e5b1",
+       "model_id": "5acd1d6c774e4cc8ba8f4d487e3c72d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -57,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cef3134818334857a8caf1dbb71e8d1a",
+       "model_id": "0a4f24b9e5d14dc3b199a765eda2157b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Field filtering"
+    "## 3. Skip fields"
    ]
   },
   {
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4499b156cd99451e9d6002a526a37f38",
+       "model_id": "64f3a5d29feb478f9149b879e5f0beaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,9 +120,9 @@
     "    \"answer\": \"a\"\n",
     "}]\n",
     "\n",
-    "filtered_fields = ['id'] \n",
-    "anno = Annotator(problems, filtered_fields=filtered_fields)\n",
-    "anno.start()"
+    "skip_fields = ['id'] \n",
+    "annotator = Annotator(problems, skip_fields=skip_fields)\n",
+    "annotator.start()"
    ]
   }
  ],
