Update pip package - with skip fields and int float issue fixed

--- a/developement.ipynb
+++ b/developement.ipynb
@@ -32,21 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "custom_fields = [\n",
-    "    (\"options2\", list, 85),\n",
-    "    (\"options3\", list, 5)\n",
-    "]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "problems = [{\n",
-    "    \"id\": \"1049\",\n",
+    "    \"id\": 1049,\n",
     "    \"problem\": \"a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :\",\n",
     "    \"options\": {\n",
     "    },\n",
@@ -61,7 +48,7 @@
     "        \"equation1\"\n",
     "    ]\n",
     "},{\n",
-    "        \"id\": \"6\",\n",
+    "        \"id\": 6,\n",
     "        \"problem\": \"a full stationary oil tank that is a right circular cylinder has a radius of 100 feet and a height of 25 feet . oil is pumped from the stationary tank to an oil truck that has a tank that is a right circular cylinder until the truck ' s tank is completely filled . if the truck ' s tank has a radius of 6 feet and a height of 10 feet , how far ( in feet ) did the oil level drop in the stationary tank ?\",\n",
     "        \"options\": {\n",
     "            \"a\": \"0.036\",\n",
@@ -80,19 +67,18 @@
     "            \"cylinder\"\n",
     "        ]\n",
     "    }\n",
-    "]\n",
-    "\n"
+    "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "434cef2b1a3b48ebb6ce090ef2823ce9",
+       "model_id": "0c8991907cf44643ab5b5da2e3d5be41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,26 +91,35 @@
     }
    ],
    "source": [
+    "filtered_fields = [\n",
+    "    'id', 'problem'\n",
+    "]\n",
+    "\n",
+    "custom_fields = [\n",
+    "    (\"options2\", list, 85),\n",
+    "    (\"options3\", list, 5)\n",
+    "]\n",
+    "\n",
     "anno = Annotator(problems)\n",
     "anno.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': '1049',\n",
+       "[{'id': 1049,\n",
        "  'problem': 'a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :',\n",
        "  'options': {},\n",
        "  'answer': 'b',\n",
        "  'equations': ['4 / 100 = x'],\n",
        "  'concepts': ['cube'],\n",
        "  'types': ['equation1']},\n",
-       " {'id': '6',\n",
+       " {'id': 6,\n",
        "  'problem': \"a full stationary oil tank that is a right circular cylinder has a radius of 100 feet and a height of 25 feet . oil is pumped from the stationary tank to an oil truck that has a tank that is a right circular cylinder until the truck ' s tank is completely filled . if the truck ' s tank has a radius of 6 feet and a height of 10 feet , how far ( in feet ) did the oil level drop in the stationary tank ?\",\n",
        "  'options': {'a': '0.036', 'b': '0.36', 'c': '0.6', 'd': '6', 'e': '3.6'},\n",
        "  'answer': 'a',\n",
@@ -132,7 +127,7 @@
        "  'concepts': ['cylinder']}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +147,7 @@
        "'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,50 +158,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_fields = [\n",
+    "    'id', \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-3f786850e387>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['id']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(\"a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type([1,2,3]) == list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len('cubeheightheightheightheightheightheightheightheightheightheightheightheightheightheightheightheightheighthei')"
+    "filtered_fields"
    ]
   },
   {
