--- a/developement.ipynb
+++ b/developement.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "1. topic\n",
     "2. custom field\n",
-    "others"
+    "others\n",
+    "\n",
+    "要先取得 fields 才能知道要copy那些problem吧?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -14,7 +20,8 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "+ https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Styling.html"
+    "+ https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Styling.html\n",
+    "+ [OrderedDict Comprehension](https://stackoverflow.com/questions/32895660/is-there-an-ordereddict-comprehension/32895702)"
    ]
   },
   {
@@ -23,30 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_annotator.annotator import Annotator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from jupyter_annotator.annotator import Annotator\n",
     "\n",
-    "custom_fields = [\n",
-    "    (\"options2\", list, 85),\n",
-    "    (\"options3\", list, 5)\n",
-    "]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "problems = [{\n",
-    "    \"id\": \"1049\",\n",
+    "    \"id\": 1049,\n",
     "    \"problem\": \"a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :\",\n",
     "    \"options\": {\n",
     "    },\n",
@@ -86,13 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# problems = [{\n",
+    "#     \"problem\": \"Where would I not want a fox? (a problem from coommonsenseQA)\",\n",
+    "#     \"options\": {\n",
+    "#         \"a\": \"hen house\", \"b\": \"england\", \"c\": \"mountains\", \"d\": \"english hunt\", \"e\": \"california\"\n",
+    "#     },\n",
+    "#     \"answer\": \"a\"\n",
+    "# }]\n",
+    "\n",
+    "# custom_fields = [(\"rationale\", str, 100)] # (field_name, type, max_length)\n",
+    "# anno = Annotator(problems, custom_fields=custom_fields)\n",
+    "# anno.start()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "434cef2b1a3b48ebb6ce090ef2823ce9",
+       "model_id": "b2c33826233745969ea9412dc47c0f37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,40 +114,16 @@
     }
    ],
    "source": [
-    "anno = Annotator(problems)\n",
+    "\n",
+    "custom_fields = [\n",
+    "    (\"options2\", list, 85),\n",
+    "    (\"options3\", list, 5)\n",
+    "]\n",
+    "skip_fields = ['id']\n",
+    "filter_fields = ['types']\n",
+    "\n",
+    "anno = Annotator(problems, custom_fields=custom_fields, filter_fields=filter_fields, skip_fields=skip_fields)\n",
     "anno.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '1049',\n",
-       "  'problem': 'a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :',\n",
-       "  'options': {},\n",
-       "  'answer': 'b',\n",
-       "  'equations': ['4 / 100 = x'],\n",
-       "  'concepts': ['cube'],\n",
-       "  'types': ['equation1']},\n",
-       " {'id': '6',\n",
-       "  'problem': \"a full stationary oil tank that is a right circular cylinder has a radius of 100 feet and a height of 25 feet . oil is pumped from the stationary tank to an oil truck that has a tank that is a right circular cylinder until the truck ' s tank is completely filled . if the truck ' s tank has a radius of 6 feet and a height of 10 feet , how far ( in feet ) did the oil level drop in the stationary tank ?\",\n",
-       "  'options': {'a': '0.036', 'b': '0.36', 'c': '0.6', 'd': '6', 'e': '3.6'},\n",
-       "  'answer': 'a',\n",
-       "  'equations': ['3.14 * 100* 100 = x', '3.14 * 6* 6 * 10 = y', 'y / x = z'],\n",
-       "  'concepts': ['cylinder']}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "problems"
    ]
   },
   {
@@ -149,7 +134,26 @@
     {
      "data": {
       "text/plain": [
-       "'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'"
+       "[OrderedDict([('id', 1049),\n",
+       "              ('problem',\n",
+       "               'a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :'),\n",
+       "              ('options', {}),\n",
+       "              ('answer', 'b'),\n",
+       "              ('equations', ['4 / 100 = x']),\n",
+       "              ('concepts', ['cube']),\n",
+       "              ('options2', ['sdfsdf']),\n",
+       "              ('options3', ['sdfsdfsdf'])]),\n",
+       " OrderedDict([('id', '6'),\n",
+       "              ('problem',\n",
+       "               \"a full stationary oil tank that is a right circular cylinder has a radius of 100 feet and a height of 25 feet . oil is pumped from the stationary tank to an oil truck that has a tank that is a right circular cylinder until the truck ' s tank is completely filled . if the truck ' s tank has a radius of 6 feet and a height of 10 feet , how far ( in feet ) did the oil level drop in the stationary tank ?\"),\n",
+       "              ('options',\n",
+       "               {'a': '0.036', 'b': '0.36', 'c': '0.6', 'd': '6', 'e': '3.6'}),\n",
+       "              ('answer', 'a'),\n",
+       "              ('equations',\n",
+       "               ['3.14 * 100* 100 = x', '3.14 * 6* 6 * 10 = y', 'y / x = z']),\n",
+       "              ('concepts', ['cylinder', 'sdfsdfsdf']),\n",
+       "              ('options2', ['']),\n",
+       "              ('options3', [''])])]"
       ]
      },
      "execution_count": 6,
@@ -158,63 +162,24 @@
     }
    ],
    "source": [
-    "'a'*100"
+    "anno.problems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-3f786850e387>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(\"a cube of edge 7 cm is cut into cubes each of edge 1 cm . the ratio of the total surface area of one of the small cubes to that of the large cube is equal to :\")"
+    "a = dict"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "type([1,2,3]) == list"
+    "## "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len('cubeheightheightheightheightheightheightheightheightheightheightheightheightheightheightheightheightheighthei')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
