Update readme and demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5acd1d6c774e4cc8ba8f4d487e3c72d2",
+       "model_id": "682cf3ba9b7a4c008102896d0aebfe64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,22 +31,27 @@
     "from jupyter_annotator import Annotator\n",
     "\n",
     "problems = [{\n",
+    "    \"id\": 2,\n",
     "    \"problem\": \"Where would I not want a fox? (a problem from coommonsenseQA)\",\n",
     "    \"options\": {\n",
     "        \"a\": \"hen house\", \"b\": \"england\", \"c\": \"mountains\", \"d\": \"english hunt\", \"e\": \"california\"\n",
     "    },\n",
-    "    \"answer\": \"a\"\n",
+    "    \"answer\": \"a\",\n",
+    "    \"xxx\": \"yyyyyyyyyyy\"\n",
     "}]\n",
     "\n",
-    "anno = Annotator(problems)\n",
-    "anno.start()"
+    "annotator = Annotator(problems)\n",
+    "annotator.start()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Custom fields"
+    "## 2. Custom fields + skip + filter\n",
+    "+ Add custom field in the format (field_name, type, max_length)\n",
+    "+ Skip fields: the fields which will not appear in the form but appear in the preview so that they won't be edited. \n",
+    "+ Filter fields: the fields that won't appear either in the form or in the preview "
    ]
   },
   {
@@ -57,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a4f24b9e5d14dc3b199a765eda2157b",
+       "model_id": "f586c7e6bc87426e86a51c031ae6211c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,23 +76,28 @@
    ],
    "source": [
     "problems = [{\n",
+    "    \"id\": 2,\n",
     "    \"problem\": \"Where would I not want a fox? (a problem from coommonsenseQA)\",\n",
     "    \"options\": {\n",
     "        \"a\": \"hen house\", \"b\": \"england\", \"c\": \"mountains\", \"d\": \"english hunt\", \"e\": \"california\"\n",
     "    },\n",
-    "    \"answer\": \"a\"\n",
+    "    \"answer\": \"a\",\n",
+    "    \"filtered\": \"xxxxxxxxxxxx\"\n",
     "}]\n",
     "\n",
-    "custom_fields = [(\"rationale\", str, 100)] # (field_name, type, max_length)\n",
-    "anno = Annotator(problems, custom_fields=custom_fields)\n",
-    "anno.start()"
+    "custom_fields = [(\"rationale\", str, 100)] \n",
+    "skip_fields = ['id'] \n",
+    "filter_fields = [\"xxx\"]\n",
+    "\n",
+    "annotator = Annotator(problems, custom_fields=custom_fields, skip_fields=skip_fields, filter_fields=filter_fields)\n",
+    "annotator.start()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Skip fields"
+    "## 3. Save annotations"
    ]
   },
   {
@@ -97,33 +107,36 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64f3a5d29feb478f9149b879e5f0beaa",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(VBox(children=(Output(),), layout=Layout(width='43%')), VBox(children=(Textarea(value='', descr…"
+       "[OrderedDict([('id', 2),\n",
+       "              ('problem',\n",
+       "               'Where would I not want a fox? (a problem from coommonsenseQA)'),\n",
+       "              ('options',\n",
+       "               {'a': 'hen house',\n",
+       "                'b': 'england',\n",
+       "                'c': 'mountains',\n",
+       "                'd': 'english hunt',\n",
+       "                'e': 'california'}),\n",
+       "              ('answer', 'a'),\n",
+       "              ('xxx', 'yyyyyyyyyyy'),\n",
+       "              ('rationale', '')])]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "problems = [{\n",
-    "    \"id\": 1,\n",
-    "    \"problem\": \"Where would I not want a fox? (a problem from coommonsenseQA)\",\n",
-    "    \"options\": {\n",
-    "        \"a\": \"hen house\", \"b\": \"england\", \"c\": \"mountains\", \"d\": \"english hunt\", \"e\": \"california\"\n",
-    "    },\n",
-    "    \"answer\": \"a\"\n",
-    "}]\n",
-    "\n",
-    "skip_fields = ['id'] \n",
-    "annotator = Annotator(problems, skip_fields=skip_fields)\n",
-    "annotator.start()"
+    "annotator.problems"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
