--- a/developement.ipynb
+++ b/developement.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2c33826233745969ea9412dc47c0f37",
+       "model_id": "b23d4f1d82d94cd28cc59ffb384e73f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     "\n",
     "custom_fields = [\n",
     "    (\"options2\", list, 85),\n",
-    "    (\"options3\", list, 5)\n",
+    "    (\"options3\", int, 5)\n",
     "]\n",
     "skip_fields = ['id']\n",
     "filter_fields = ['types']\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +141,9 @@
        "              ('answer', 'b'),\n",
        "              ('equations', ['4 / 100 = x']),\n",
        "              ('concepts', ['cube']),\n",
-       "              ('options2', ['sdfsdf']),\n",
-       "              ('options3', ['sdfsdfsdf'])]),\n",
+       "              ('types', ['equation1']),\n",
+       "              ('options2', []),\n",
+       "              ('options3', 0)]),\n",
        " OrderedDict([('id', '6'),\n",
        "              ('problem',\n",
        "               \"a full stationary oil tank that is a right circular cylinder has a radius of 100 feet and a height of 25 feet . oil is pumped from the stationary tank to an oil truck that has a tank that is a right circular cylinder until the truck ' s tank is completely filled . if the truck ' s tank has a radius of 6 feet and a height of 10 feet , how far ( in feet ) did the oil level drop in the stationary tank ?\"),\n",
@@ -151,12 +152,13 @@
        "              ('answer', 'a'),\n",
        "              ('equations',\n",
        "               ['3.14 * 100* 100 = x', '3.14 * 6* 6 * 10 = y', 'y / x = z']),\n",
-       "              ('concepts', ['cylinder', 'sdfsdfsdf']),\n",
-       "              ('options2', ['']),\n",
-       "              ('options3', [''])])]"
+       "              ('concepts', ['cylinder']),\n",
+       "              ('types', []),\n",
+       "              ('options2', []),\n",
+       "              ('options3', 0)])]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
